fix: title alignment

--- a/packages/gatsby-theme-carbon/src/components/Header/Header.module.scss
+++ b/packages/gatsby-theme-carbon/src/components/Header/Header.module.scss
@@ -58,7 +58,8 @@ header.header {
   left: 3rem;
   white-space: nowrap;
   padding: 0 $spacing-05;
-  height: 100%;
+  height: 3rem;
+  border-top: 1px solid transparent;
   display: flex;
   align-items: center;
   &:focus {
